@@ -6,27 +6,35 @@
 	</maintainer>
 	<longdescription lang="en">
 		The purpose of beets is to get your music collection right once and for
-		all. It catalogs your collection, automatically improving its metadata as
-		it goes using the MusicBrainz database. (It also downloads cover art for
-		albums it imports.) Then it provides a bouquet of tools for manipulating
-		and accessing your music.
+		all. It catalogs your collection, automatically improving its metadata
+		as it goes. It then provides a bouquet of tools for manipulating and
+		accessing your music.
 
-		Because beets is designed as a library, it can do almost anything you can
-		imagine for your music collection. Via plugins, beets becomes a panacea:
-		* Embed and extract album art from files’ tags.
-		* Listen to your library with a music player that speaks the MPD protocol
-		and works with a staggering variety of interfaces.
-		* Fetch lyrics for all your songs from databases on the Web.
-		* Manage your MusicBrainz music collection.
-		* Analyze music files’ metadata from the command line.
+		Because beets is designed as a library, it can do almost anything you
+		can imagine for your music collection. Via plugins, beets becomes a
+		panacea:
+		* Fetch or calculate all the metadata you could possibly need:
+			album art, lyrics, genres, tempos, ReplayGain levels, or
+			acoustic fingerprints.
+		* Get metadata from MusicBrainz, Discogs, and Beatport. Or guess
+			metadata using songs' filenames or their acoustic fingerprints.
+		* Transcode audio to any format you like.
+		* Check your library for duplicate tracks and albums or for albums
+			that are missing tracks.
 		* Clean up crufty tags left behind by other, less-awesome tools.
-		* Browse your music library graphically through a Web browser and play it
-		in any browser that supports HTML5 Audio.
+		* Embed and extract album art from files' metadata.
+		* Browse your music library graphically through a Web browser and play
+			it in any browser that supports HTML5 Audio.
+		* Analyze music files' metadata from the command line.
+		* Listen to your library with a music player that speaks the MPD
+			protocol and works with a staggering variety of interfaces.
 
-		If beets doesn’t do what you want yet, writing your own plugin is
+		If beets doesn't do what you want yet, writing your own plugin is
 		shockingly simple if you know a little Python.
 	</longdescription>
 	<use>
+		<flag name="absubmit">Enable support for uploading music information to AcousticBrainz</flag>
+
 		<flag name="badfiles">Validate MP3 &amp; FLAC files</flag>
 		<flag name="chromaprint">Enable support for acoustic fingerprinting plugin using <pkg>media-libs/chromaprint</pkg></flag>
 		<flag name="ffmpeg">Enable support for the convert plugin to transcode files via <pkg>media-video/ffmpeg</pkg></flag>
